Fix [Models] Actions aren't aligned

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -248,7 +248,7 @@ main {
 
           &-icon {
             justify-content: center;
-            padding: 5px;
+            padding: 0;
             max-width: 85px;
 
             @include tableColumnFlex(0, 50px);
@@ -274,7 +274,11 @@ main {
                   background-color: $white;
 
                   &:before {
-                    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+                    background: linear-gradient(
+                      90deg,
+                      rgba(255, 255, 255, 0) 0%,
+                      rgba(255, 255, 255, 1) 100%
+                    );
                   }
                 }
               }
@@ -289,7 +293,11 @@ main {
                       background-color: $ghostWhite;
 
                       &:before {
-                        background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(245,247,255,1) 100%);
+                        background: linear-gradient(
+                          90deg,
+                          rgba(255, 255, 255, 0) 0%,
+                          rgba(245, 247, 255, 1) 100%
+                        );
                       }
                     }
 
@@ -332,7 +340,7 @@ main {
               .table-cell-icon {
                 .actions-menu {
                   &__container {
-                    display: block;
+                    display: flex;
                   }
                 }
               }
